--- a/archive/openscad-ukol2017.adoc
+++ b/archive/openscad-ukol2017.adoc
@@ -1,14 +1,5 @@
 = OpenSCAD: Domácí úkol ZS 2017/2018 
 
+WARNING: Toto není aktuální zadání úkolu. Je zde pouze k účelům archivace.
 
-[IMPORTANT]
-====
-BETA verze Domacího úkolu
-
-Můžete začít pracovat.
-
-https://github.com/3DprintFIT/B171HW-Assignment[ZDE]
-
-====
-
-Domácí úkoly ze semestrů minulých můžete vidět v xref:archive/index#[archívu].
+Zadání domácího úkolu ZS 2017/2018 najdete na https://github.com/3DprintFIT/B171HW-Assignment[GitHubu].
