--- a/archive/openscad-ukol2014.adoc
+++ b/archive/openscad-ukol2014.adoc
@@ -10,7 +10,7 @@ Vaším úkolem je vytvořit parametrický model krabičky. Krabička má podsta
 TIP: Naše automatické testy používají plný render (v apliakci zkratka F6). Netestujte váš kód pouze s F5. Pozor také na modifikátor % - v režimu plného renderu se takto prefixovaný kód neobjeví.
 
 
-= Půdorys
+== Půdorys
 
 
 image::pudoris.png[width="400"]
@@ -18,7 +18,7 @@ image::pudoris.png[width="400"]
 Použité argumenty: `x` a `y` jsou vnitřní rozměry, `rad` je poloměr zaoblení rohu (také vnitřní). V případě hodnot `x` nebo `y` <= 0 se krabička nevykreslí. V případě hodnoty `rad` <= 0 je vnitřní roh pravoúhlý. V případě, že se do rohů kružnice s poloměrem `rad` nevejde, zmenší se poloměr na mezní hodnotu.
 
 
-== wall_thick
+=== wall_thick
 
 
 image::roh.png[width="400"]
@@ -40,7 +40,7 @@ image::roh90-bad.png[]
 Použité argumenty: `wall_thick` je tloušťka stěny. Musí být všude stejná, včetně rohu. Pro hodnoty <= 0 se krabička nevykreslí.
 
 
-= Bokorys
+== Bokorys
 
 
 image::bokorys-vrsek.png[width="400"]
@@ -51,7 +51,7 @@ image::bokorys-spodek.png[width="400"]
 Použité argumenty: `z1` a `z2` jsou výšky jednotlivých částí včetně podstav. `wall_thick` je stejný jako u půdorysu, jen se v rohu chová jinak, viz obrázek. Pro hodnoty `z1` nebo `z2` <= `wall_thick` (respektive `wall_thick` + `lock_z` pro `z1`, viz níže) se krabička vykreslí pouze na výšku dna/stropu a spojovacího mechanismu.
 
 
-== Detail spojení
+=== Detail spojení
 
 
 image::lock.png[]
@@ -59,7 +59,7 @@ image::lock.png[]
 Použité argumenty: `wall_thick` je stejný jako výše. `lock_z` je výše zubu, pozor na různý vztah k `z1` a `z2`. `reserve` je rozměr mezery mezi jednotlivými díly krabičky. Pro hodnoty < 0 se `reserve` a `lock_z` nastaví na 0. Pokud je `reserve` větší než `wall_thick`, zuby mechanismu se nevykreslí. `*` není argument, ale vyznačuje, že oba vyznačené rozměry jsou stejné (a to po celém obvodu krabičky/délce spoje).
 
 
-= Interafce
+== Interafce
 
 
 ----
@@ -79,13 +79,13 @@ Modul musí jít použít z externího souboru pomocí direktivy `use` - nesmí 
 *Update:* Zachovejte výchozí hodnoty argumentů tak, jak jsou zadané!
 
 
-= Kód
+== Kód
 
 
 Kód musí splňovat určitou kvalitu, jednou z podmínek je logické dodržení odsazení (v celém souboru stejné). Opakované konstrukce musí být implementovány vlastními moduly a forcykly. Magické konstanty musí být samovysvětlující, nebo doplněné o komentář. Není možné použít žádné externí knihovny pro OpenSCAD, ani knihovnu MCAD. Manipulace s `$fn`, `$fs` a `$fa` je zakázána.
 
 
-= Odevzdávání a hodnocení
+== Odevzdávání a hodnocení
 
 
 Soubor pojmenujte box.scad, uložte do archivu box.zip (přímo do kořenového adresáře archivu) a nahrajte přímo do svého osobního namespacu na Eduxu. Musí jít stáhnout z odkazu `https://edux.fit.cvut.cz/courses/BI-3DT/_media/student/username/box.zip` Na soubor do namespacu umístěte odkaz. V archivu kromě souboru box.scad musí být pouze potřebné soubory (další vaše scad soubory s moduly, případné DXF nebo STL soubory k importování), do archivu nepatří vygenerované STL soubory krabičky.
@@ -97,7 +97,7 @@ Po ohodnocení (které proběhne až po termínu odevzdání) nelze úlohu oprav
 Při hodnocení se bude poloautomaticky testovat sada připravených argumentů obsahující především krajní případy. Doporučujeme proto modul vyzkoušet pro všemožné vstupy (nečíselné vstupy testovány nebudou). Na základě výsledku z testu a kvality kódu student může získat 0 až 20 bodů. V případě, že vyhodnotíme, že student úlohu opsal, případně vlastnímu kódu vůbec nerozumí, a ten neprokáže opak, bude úloha hodnocena -100 body, což znamená klasifikaci známkou F.
 
 
-= Otázky od studentů
+== Otázky od studentů
 
 
 *Jak se má krabička chovat, pokud `rad` > `x/2` nebo `y/2`?*
