--- a/tutorials/reprap.adoc
+++ b/tutorials/reprap.adoc
@@ -1,8 +1,9 @@
-Technologie tisku a RepRap
---------------------------
+= Technologie tisku a RepRap
 
-Proč 3D tisk?
-~~~~~~~~~~~~~
+:imagesdir: ../images/reprap
+:toc:
+
+== Proč 3D tisk?
 
 * levná a rychlá výroba prototypů (v řádu hodin)
 * snadné přenesení grafických návrhů do fyzické podoby
@@ -10,8 +11,7 @@ Proč 3D tisk?
 * nechceme sériovou výrobu
 * zábava 😎
 
-Základní princip
-~~~~~~~~~~~~~~~~
+== Základní princip
 
 Jak to celé funguje?
 
@@ -25,21 +25,16 @@ na sebe. Můžeme si to představit, jako kdybychom chtěli za pomocí stolní
 tiskárny vyrobit 3D objekt z papíru. Nejprve vytiskneme všechny potřebné
 vrstvy, poté nůžkami vystříháme a nalepujeme na sebe.
 
-Stereolitografie (SLA)
-~~~~~~~~~~~~~~~~~~~~~~
+== Stereolitografie (SLA)
 
 Metoda vytváření objektů z tekutého polymeru, který je postupně
 vytvrzován pomocí záření různých vlnových délek.
 https://www.youtube.com/watch?v=NM55ct5KwiI[Video]
 
-image:../images/reprap/stereolithography_apparatus.jpg[Stereolitografie]
+.Stereolitografie. Z https://commons.wikimedia.org/wiki/File:Stereolithography_apparatus.jpg[Wikipedie] © Materialgeeza (CC BY-SA)
+image::stereolithography_apparatus.jpg[]
 
-(Obrázek z
-https://commons.wikimedia.org/wiki/File:Stereolithography_apparatus.jpg[Wikipedie]
-© Materialgeeza (CC BY-SA).)
-
-Práškový tisk (SLS, DMLS)
-~~~~~~~~~~~~~~~~~~~~~~~~~
+== Práškový tisk (SLS, DMLS)
 
 Technologie je založena na kladení tenkých vrstev prášku a následného
 vytvrzení pouze potřebných míst. Vytvrzení může probíhat buď zapečením
@@ -48,42 +43,30 @@ ozářením většinou UV zářením.
 https://www.youtube.com/watch?v=9E5MfBAV_tA[Video SLS],
 https://www.youtube.com/watch?v=bgQvqVq-SQU[Video DMLS]
 
-image:../images/reprap/sls.jpg[Práškový tisk]
+.Práškový tisk. https://www.prlog.org/12539309-3d-printing-powder-market-analysis-till-2021-download.html[Obrázek] © PRLog
+image::sls.jpg[]
 
-(https://www.prlog.org/12539309-3d-printing-powder-market-analysis-till-2021-download.html[Obrázek]
-© PRLog.)
 
-PolyJet
-~~~~~~~
+== PolyJet
 
 Podobně jako v inkoustových tiskárnách je polymer vytryskáván z tiskové
 hlavy pomocí miniaturních trysek. Následně je vrstva vytvrzena UV
 paprskem. https://www.youtube.com/watch?v=ZjXh1RJfA34[Video]
 
-image:../images/reprap/polyjet.jpg[PolyJet]
+.PolyJet. (Nedokážeme dohledat původ obrázku, pomůžete nám? Na internetu je příliš rozšířený.)
+image::polyjet.jpg[PolyJet]
 
-(Nedokážeme dohledat původ obrázku, pomůžete nám? Na internetu je příliš
-rozšířený.)
-
-FFF/FDM/Thermoplastic extrusion
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+== FFF/FDM/Thermoplastic extrusion
 
 FFF (fused filament fabrication) nebo FDM (Fused Deposition Modeling) je
 technologie, která je založena na principu "tavné pistole". Plast je
 tlačen do trysky, kde je roztaven a následně je kladen na podložku.
 https://www.youtube.com/watch?v=WHO6G67GJbM[Video]
 
-image:../images/reprap/fdm_by_zureks.png[FDM]
+.FDM. _1 – tryska vytlačující plast, 2 – vymodelovaná část objektu, 3 – pohybující se platforma._ Z https://commons.wikimedia.org/wiki/File:FDM_by_Zureks.png[Wikipedie] © Zureks (CC BY-SA)
+image::fdm_by_zureks.png[width="500"]
 
-(Obrázek z
-https://commons.wikimedia.org/wiki/File:FDM_by_Zureks.png[Wikipedie] ©
-Zureks (CC BY-SA).)
-
-_1 - tryska vytlačující plast, 2 - vymodelovaná část objektu, 3 -
-pohybující se platforma_
-
-RepRap
-~~~~~~
+== RepRap
 
 * Adrian Bowyer, University of Bath 2006
 * RepRap Darwin, 2007
@@ -93,83 +76,60 @@ RepRap
 Více na
 http://reprap.org/wiki/RepRap_history[reprap.org/wiki/RepRap_history].
 
-Technologie RepRap
-~~~~~~~~~~~~~~~~~~
+== Technologie RepRap
 
 FFF/FDM - technologie tavení plastového drátu (termoplastu) v trysce.
 Principem RepRap tiskárny je částečná replikace sebe sama.
 
-Výhody
-^^^^^^
+== Výhody
 
 * Levné (Pořizovací náklady cca 10000 Kč, cena plastu cca 0.7 Kč/g)
 * OpenSource/OpenHardware
 
-Nevýhody
-^^^^^^^^
+== Nevýhody
 
 * Pořízení první tiskárny (slepice/vejce)
 
-Základní modely RepRap
-~~~~~~~~~~~~~~~~~~~~~~
+== Základní modely RepRap
 
-image:../images/reprap/reprap_darwin.jpg[RepRap Darwin]
+.RepRap Darwin. © http://reprap.org/wiki/File:RepRapOneDarwin-darwin.jpg[Adrian Bowyer], GNU FDL
+image::reprap_darwin.jpg[width="600"]
 
-(© http://reprap.org/wiki/File:RepRapOneDarwin-darwin.jpg[Adrian
-Bowyer], GNU FDL)
+.RepRap Mendel. © http://reprap.org/wiki/File:Mendel.jpg[Adrian Bowyer], GNU FDL
+image::reprap_v2_mendel.jpg[width="600"]
 
-image:../images/reprap/reprap_v2_mendel.jpg[RepRap Mendel]
+.Rostock. http://reprap.org/wiki/File:Rostock.jpg[Johann C. Rocholl], GNU FDL
+image::rostock.jpg[width="600"]
 
-(© http://reprap.org/wiki/File:Mendel.jpg[Adrian Bowyer], GNU FDL)
+== Fork-modely
 
-image:../images/reprap/rostock.jpg[Rostock]
+.Huxley. © https://www.root.cz/galerie/linuxalt-2012/#29[Petr Krčmář, root.cz], použito se svolením
+image::huxley.jpg[width="600"]
 
-(© http://reprap.org/wiki/File:Rostock.jpg[Johann C. Rocholl], GNU FDL)
+.Prusa Mendel. © http://reprap.org/wiki/File:Assembled-prusa-mendel.jpg[Josef Průša], GNU FDL
+image::assembled-prusa-mendel.jpg[width="600"]
 
-Fork-modely
-~~~~~~~~~~~
+.Prusa i3. © http://reprap.org/wiki/File:Prusai3-metalframe.jpg[Bitflusher], GNU FDL
+image::prusai3-metalframe.jpg[width="600"]
 
-image:../images/reprap/huxley.jpg[Huxley]
+.Rebel 2. © https://www.clexpert.cz/3dtisk/rebel2/[Petr Zahradník], fair use
+image::rebel2.jpg[width="600"]
 
-(© https://www.root.cz/galerie/linuxalt-2012/#29[Petr Krčmář, root.cz],
-použito se svolením)
+.RebeliX (vlastní foto)
+image::rebelix.jpg[width="600"]
 
-image:../images/reprap/assembled-prusa-mendel.jpg[Prusa Mendel]
+.Kossel. © http://reprap.org/wiki/File:Kossel.jpg[Johann C. Rocholl], GNU FDL
+image::kossel.jpg[width="600"]
 
-(© http://reprap.org/wiki/File:Assembled-prusa-mendel.jpg[Josef Průša],
-GNU FDL)
+== Speciální typy
 
-image:../images/reprap/prusai3-metalframe.jpg[Prusa i3]
+.Morgan. © http://www.morgan3dp.com/reprap-morgan-source/[Morgan 3D Printers], GPLv2
+image::morgan.jpg[width="600"]
 
-(© http://reprap.org/wiki/File:Prusai3-metalframe.jpg[Bitflusher], GNU
-FDL)
+.FoldaRap. © https://www.thingiverse.com/thing:15877[Emmanuel], GPLv2
+image::foldarap.jpg[width="600"]
 
-image:../images/reprap/rebel2.jpg[Rebel 2]
-
-(© https://www.clexpert.cz/3dtisk/rebel2/[Petr Zahradník], fair use)
-
-image:../images/reprap/rebelix.jpg[RebeliX]
-
-(vlastní foto)
-
-image:../images/reprap/kossel.jpg[Kossel]
-
-(© http://reprap.org/wiki/File:Kossel.jpg[Johann C. Rocholl], GNU FDL)
-
-Speciální typy
-~~~~~~~~~~~~~~
-
-image:../images/reprap/morgan.jpg[Morgan]
-
-(© http://www.morgan3dp.com/reprap-morgan-source/[Morgan 3D Printers],
-GPLv2)
-
-image:../images/reprap/foldarap.jpg[FoldaRap]
-
-(© https://www.thingiverse.com/thing:15877[Emmanuel], GPLv2)
-
-Vstupní formát (Slicing)
-~~~~~~~~~~~~~~~~~~~~~~~~
+== Vstupní formát (Slicing)
 
 *STL* (STereoLitography) -- mesh trojúhelníků, popisuje povrchovou
 geometrii modelu.
@@ -177,8 +137,7 @@ geometrii modelu.
 Exportovaný z jakéhokoliv 3D modelovacího programu. Více informací v
 kapitole xref:mesh#[Práce s meshí].
 
-Vstupní formát tiskárny
-~~~~~~~~~~~~~~~~~~~~~~~
+== Vstupní formát tiskárny
 
 *GCode* -- instrukce pro tiskárnu
 
@@ -190,21 +149,17 @@ G1 X10 Y10 Z10 E10
 M220 S150 
 ----
 
-Tiskové materiály
-~~~~~~~~~~~~~~~~~
+== Tiskové materiály
 
-SLA
-^^^
+=== SLA
 
 Fotopolymer - pro domácí použití příliš drahý
 
-SLS
-^^^
+=== SLS
 
 Práškový materiál (kov nebo plast)
 
-FDM/FFF
-^^^^^^^
+=== FDM/FFF
 
 Plastový materiál v drátu
 
